// proto файл admin-сервиса для генерации grpc-сервера

syntax = "proto3";

package admin;

import "google/protobuf/timestamp.proto";

option go_package = "admin/proto;adminpb";

message WeeklyClinicSchedule {
  int32 id = 1;
  int32 weekday = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  int32 slot_duration_minutes = 5;
  bool is_day_off = 6;
}

message UpdateClinicWeeklyScheduleRequest {
  repeated WeeklyClinicSchedule clinic_schedule = 1;
}

message WeeklyDoctorSchedule {
  int32 id = 1;
  int32 doctor_id = 2;
  int32 weekday = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  int32 slot_duration_minutes = 6;
  bool is_day_off = 7;
}

message AddDoctorWeeklyScheduleRequest {
  repeated WeeklyDoctorSchedule doctor_schedule = 1;
}

message UpdateDoctorWeeklyScheduleRequest {
  repeated WeeklyDoctorSchedule doctor_schedule = 1;
}

message DefaultResponse {
  string err = 1;
}

message AddClinicDailyOverrideRequest {
  google.protobuf.Timestamp date = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  int32 slot_duration_minutes = 4;
  bool is_day_off = 5;
}

message AddDoctorDailyOverrideRequest {
  int32 doctor_id = 1;
  google.protobuf.Timestamp date = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  int32 slot_duration_minutes = 5;
  bool is_day_off = 6;
}

message AddMaterialRequest {
  string name = 1;
  int32 price = 2;
}

message AddServiceRequest {
  string name = 1;
  int32 price = 2;
  int32 type = 3;
}

message UpdateMaterialRequest {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
}

message UpdateServiceRequest {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
  int32 type = 4;
}

message Material {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
}

message Service {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
  int32 type = 4;
}

message DeleteRequest {
  int32 id = 1;
}

message ServiceType {
  int32 id = 1;
  string name = 2;
}

message Admin {
  int32 user_id = 1;
  string first_name = 2;
  string second_name = 3;
  string surname = 4;
  string phone_number = 5;
  string email = 6;
  string gender = 7;
  string role = 8;
}

message GetAdminsResponse {
  repeated Admin admins = 1;
}


message DoctorWithSpecs {
  int32 user_id = 1;
  string first_name = 2;
  string second_name = 3;
  string surname = 4;
  string phone_number = 5;
  string email = 6;
  string education = 7;
  int32 experience = 8;
  string gender = 9;
  repeated int32 specs = 10;
}

message GetDoctorsResponse {
  repeated DoctorWithSpecs doctors = 1;
}

message UpdateDoctorRequest {
  int32 user_id = 1;
  string first_name = 2;
  string second_name = 3;
  string surname = 4;
  string phone_number = 5;
  string email = 6;
  string education = 7;
  int32 experience = 8;
  string gender = 9;
  repeated int32 specs = 10;
}

message UpdateAdminRequest {
  int32 user_id = 1;
  string first_name = 2;
  string second_name = 3;
  string surname = 4;
  string phone_number = 5;
  string email = 6;
  string gender = 7;
  string role = 8;
}

message UpdatePatientRequest {
  int32 user_id = 1;
  string first_name = 2;
  string surname = 4;
  string second_name = 3;
  string email = 5;
  string birth_date = 6;
  string phone_number = 7;
  string gender = 8;
}

message Patient {
  int32 user_id = 1;
  string first_name = 2;
  string surname = 4;
  string second_name = 3;
  string email = 5;
  string birth_date = 6;
  string phone_number = 7;
  string gender = 8;
}

message GetPatientsResponse {
  repeated Patient patients = 1;
}

message EmptyRequest {

}

message Spec {
  int32 id = 1;
  string name = 2;
}
message GetSpecsResponse {
  repeated Spec specs = 1;
}

message UpdateUserLoginRequest {
  int32 user_id = 1;
  string login = 2;
}

message UnconfirmedVisitPayment {
  int32 visit_id = 1;
  string doctor = 2;
  string patient = 3;
  string created_at = 4;
  int32 price = 5;
}

message UnconfirmedVisitPaymentsResponse {
  repeated UnconfirmedVisitPayment visit_payments = 1;
}

message AdminScheduleOverview {
  repeated ScheduleDay days = 1;
  repeated string time_slots = 2;
  repeated AppointmentEntry appointments = 3;
}

message ScheduleDay {
  string date = 1;       // формат: "02.01.2006"
  string weekday = 2;    // "Пн", "Вт", и т.д.
}

message AppointmentEntry {
  int32 id = 1;
  string date = 2;       // "02.01.2006"
  string time = 3;       // "15:00"
  Person doctor = 4;
  Person patient = 5;
}

message Person {
  int64 id = 1;
  string first_name = 2;
  string second_name = 3;
  string surname = 4;
  string birth_date = 5;
  string gender = 6;
  string phone = 7;
  string specialty = 8;
}



service AdminService {
  rpc UpdateClinicWeeklySchedule(UpdateClinicWeeklyScheduleRequest) returns (DefaultResponse); // изменение постоянного расписания клиники
  rpc AddDoctorWeeklySchedule(AddDoctorWeeklyScheduleRequest) returns (DefaultResponse); // добавление постоянного расписания врача
  rpc UpdateDoctorWeeklySchedule(UpdateDoctorWeeklyScheduleRequest) returns (DefaultResponse); // изменение постоянного расписания врача
  rpc AddClinicDailyOverride(AddClinicDailyOverrideRequest) returns (DefaultResponse); // добавление переопределения дня клиники
  rpc AddDoctorDailyOverride(AddDoctorDailyOverrideRequest) returns (DefaultResponse); // добавление переопределения дня врача

  rpc AddMaterial(AddMaterialRequest) returns (DefaultResponse);
  rpc AddService(AddServiceRequest) returns (DefaultResponse);
  rpc UpdateMaterial(UpdateMaterialRequest) returns (DefaultResponse);
  rpc UpdateService(UpdateServiceRequest) returns (DefaultResponse);
  rpc DeleteMaterial(DeleteRequest) returns (DefaultResponse);
  rpc DeleteService(DeleteRequest) returns (DefaultResponse);

  rpc GetAdmins(EmptyRequest) returns (GetAdminsResponse);
  rpc GetPatients(EmptyRequest) returns (GetPatientsResponse);
  rpc GetDoctors(EmptyRequest) returns (GetDoctorsResponse);
  rpc GetSpecs(EmptyRequest) returns (GetSpecsResponse);
  rpc UpdateDoctor(UpdateDoctorRequest) returns (DefaultResponse);
  rpc UpdateAdmin(UpdateAdminRequest) returns (DefaultResponse);
  rpc UpdatePatient(UpdatePatientRequest) returns (DefaultResponse);
  rpc DeleteUser(DeleteRequest) returns (DefaultResponse);
  rpc UpdateEmployeeLogin(UpdateUserLoginRequest) returns (DefaultResponse);
  rpc UpdatePatientLogin(UpdateUserLoginRequest) returns (DefaultResponse);
  rpc GetUnconfirmedVisitPayments(EmptyRequest) returns (UnconfirmedVisitPaymentsResponse);

  rpc GetClinicScheduleGrid(EmptyRequest) returns (AdminScheduleOverview);
}
